# galil_new_code

./: .gitignore  .readthedocs.yaml  README.md
docs/: conf.py  gazebo_simulation.md  getting_started.md  hardware_interfaces.md  index.md  index.rst  inspection_commands.md  joint_order.md  launch_files.md  mp_needle_trajectory_controller.md  position_control.md  real_velocity_controller.md  real_velocity_prerequisite.md  requirements.txt  simons_estimated_velocity_control.md  sine_test_controller.md  video_demonstrations.md
galil_description/urdf/: galil.ros2_control.xacro  galil.xacro
galil_driver/: CMakeLists.txt
galil_driver/config/: galil_controllers.yaml  galil_controllers_sim.yaml
galil_driver/include/galil_driver/: hardware_interface.hpp
galil_driver/launch/: RSP.launch.py  demo.launch.py  mariana_view.launch.py  mpc.launch.py
galil_driver/src/: hardware_interface.cpp
galil_test_controllers/: CMakeLists.txt  galil_test_controllers_plugin.xml  package.xml
galil_test_controllers/include/galil_test_controllers/: sine_real_velocity_controller.hpp
galil_test_controllers/src/: sine_real_velocity_controller.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
mp_needle_trajectory_controller/include/mp_needle_trajectory_controller/: mp_needle_traj.hpp
mp_needle_trajectory_controller/src/: mp_needle_traj.cpp  mpc_helpers.cpp
needle_tip_sim/data/: insertion_points.csv
needle_tip_sim/launch/: needle_tip_pub.launch.py
needle_tip_sim/src/: needle_tip_sim.cpp
(+27 files in other folders)
